# making-it-big-ukraine-music

./: README.md  main.py  pyproject.toml
.cursor/rules/: 001_dataviz_foundation.mdc  002_chart_selection.mdc  003_visual_design.mdc  004_matplotlib_seaborn.mdc  005_editorial_annotations.mdc  006_quality_gate.mdc  color.mdc
.github/workflows/: pages.yml
data/charts/genres_popularity/: chart-data.js  index.html
data/charts/label_rosters/: chart-data.js  index.html
data/charts/listeners_dist/: chart-data.js  index.html
data/charts/milestones/: chart-data.js  index.html
data/charts/money_about/: index.html
data/charts/signed_deals/: chart-data.js  index.html
data/charts/uk_listeners_growth/: chart-data.js  index.html
data/charts/ukraine-music-story/: index.html
making_it_big_ukraine_music/: __init__.py  cli.py  config.py  discovery.py  http_client.py  pipeline.py
making_it_big_ukraine_music/charts/: __init__.py  cli.py  listeners_dist.py  listeners_dist_export.py  milestones.py  milestones_export.py  signed_deals_story.py  signed_deals_story_export.py  uk_listeners_growth.py  uk_listeners_growth_export.py
making_it_big_ukraine_music/charts/assets/genres_popularity/: index.html
making_it_big_ukraine_music/charts/assets/label_rosters/: index.html
making_it_big_ukraine_music/charts/assets/listeners_dist/: index.html
making_it_big_ukraine_music/charts/assets/milestones/: index.html
making_it_big_ukraine_music/charts/assets/money_about/: index.html
making_it_big_ukraine_music/charts/assets/signed_deals/: index.html
making_it_big_ukraine_music/charts/assets/uk_listeners_growth/: index.html
notebooks/: eda.ipynb
nuam_scraper/: transform.py
nuam_scraper/charts/: __init__.py  cli.py  genres_popularity.py  genres_popularity_export.py  labels_roster.py  labels_roster_export.py  milestones_export.py  money_about.py  money_about_export.py  nuam_frames.py  paths.py  signed_deals_story.py
scripts/: _add_i18n.py  apply_bilingual.py  merge_ukraine_music_story.py
scripts/charts/: export_milestones.py
(+6 files in other folders)
