[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "nuam-scraper"
version = "0.1.0"
description = "Scrape NUAM (nuam.club) for a Pudding-style Ukrainian music data story; charts + Parquet."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "tenacity>=9.1.4",
]

[project.scripts]
nuam-scrape = "nuam_scraper.cli:main"
nuam-chart = "nuam_scraper.charts.cli:main"
nuam-milestones-export = "nuam_scraper.charts.cli:milestones_legacy_main"

[tool.pytest.ini_options]
markers = [
    "integration: hits the network (Google Sheets / NUAM)",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel.force-include]
"nuam_scraper/charts/assets" = "nuam_scraper/charts/assets"
