[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "making-it-big-ukraine-music"
version = "0.1.0"
description = "Scrape NUAM (nuam.club) for a Pudding-style Ukrainian music data story; charts + Parquet. The Unlikely Odds of Making It Big in Ukraine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "tenacity>=9.1.4",
]

[project.scripts]
nuam-scrape = "making_it_big_ukraine_music.cli:main"
nuam-chart = "making_it_big_ukraine_music.charts.cli:main"
nuam-milestones-export = "making_it_big_ukraine_music.charts.cli:milestones_legacy_main"

[tool.pytest.ini_options]
markers = [
    "integration: hits the network (Google Sheets / NUAM)",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel.force-include]
"making_it_big_ukraine_music/charts/assets" = "making_it_big_ukraine_music/charts/assets"
